--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
           <p class="text-slate-700 mt-1">Preencha seus dados. Após o pagamento de <strong>R$ 9,90</strong>, enviamos o plano completo.</p>
           <form id="leadForm" class="mt-3 grid md:grid-cols-4 gap-3" onsubmit="return handleLead(event)">
             <input id="nome" type="text" required placeholder="Seu nome" class="rounded-xl border-slate-300" />
-            <input id="email" type="email" required placeholder="Seu e-mail" class="rounded-xl border-slate-300" />
+            <input id="email" type="email" required placeholder="Seu e-mail" class="rounded-xl border-slate-300"
+                   autocomplete="email" inputmode="email" autocapitalize="none" autocorrect="off" spellcheck="false"
+                   style="-webkit-text-security: none !important; text-security: none !important;" />
             <input id="whats" type="tel" inputmode="tel" required placeholder="(61) 9 9999-9999" class="rounded-xl border-slate-300" />
             <button class="rounded-xl px-6 py-3 bg-[var(--brand)] text-white font-semibold">Continuar</button>
           </form>
