--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                   || ($("resultDesc")?$("resultDesc").textContent:'')
                   || '';
         var texto = "Oi, sou " + (nome||"cliente") + ". Meu resultado no Quiz de Dieta foi: " + result + "."
-                  + (desc ? "\nResumo: " + desc : "")
+             //     + (desc ? "\nResumo: " + desc : "")
                   + "\nPagamento confirmado. Quero receber meu plano completo.";
         var link="https://wa.me/55619998514680?text="+encodeURIComponent(texto);
         window.open(link,"_blank");
